syntax= "proto3";

package pb;
option go_package = "./pkg/pb";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse){}
    rpc RegisterOtpVerify (OtpVerifyRequest) returns (OtpVerifyResponse){}
    rpc Login (LoginRequest) returns (LoginResponse){}
    rpc Validate (ValidateRequest) returns (ValidateResponse){}
    rpc AdminRegister (RegisterRequest) returns (OtpVerifyResponse){}
    rpc AdminLogin (LoginRequest) returns (LoginResponse){}
    rpc AddUserAddress (AddUserAddressRequest) returns (AddUserAddressResponse){}
    rpc ShowUserAddress (ShowUserAddressRequest) returns (ShowUserAddressResponse){}
}

//Register
message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
}

message RegisterResponse {
    int64 status = 1;
    string responseid=2;
    string error = 3;
}

message OtpVerifyRequest {
    string Otp=1;
    string OtpId=2;    
}

message OtpVerifyResponse {
    int64 status=1;
    string error=2;
    string response=3;
}
